--- a/README.Rmd
+++ b/README.Rmd
@@ -16,8 +16,11 @@ knitr::opts_chunk$set(
 # **PL94171**: Tabulate P.L. 94-171 Redistricting Data Summary Files
 
 <!-- badges: start -->
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+
+[![Lifecycle:
+experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![R-CMD-check](https://github.com/CoryMcCartan/PL94171/workflows/R-CMD-check/badge.svg)](https://github.com/CoryMcCartan/PL94171/actions)
+
 <!-- badges: end -->
 
 The **PL94171** package contains tools to process legacy format summary
@@ -33,3 +36,17 @@ You can install the development version from [GitHub](https://github.com/) with:
 # install.packages("devtools")
 devtools::install_github("CoryMcCartan/PL94171")
 ```
+
+## Basic Usage
+
+Just need block-level data for total and voting-age population by race? Then
+`pl_tidy_shp()` is all you need.
+
+``` r
+# put the path to the PL 94-171 files here, or use `pl_url()` to download them
+pl_path = system.file("extdata/ri2018_2020Style.pl", package="PL94171")
+pl_tidy_shp("RI", pl_path)
+```
+
+To tabulate at different geographies, or to extract other variables, check out
+the [Getting Started page](articles/PL94171.html).
